--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,8 +18,9 @@
         <a href="{{ site.github.repository_url }}" class="btn">View on GitHub</a>
       {% endif %}
       {% if site.download.windows %}
-        <a href="{{ site.download.windows }}" class="btn">Download for Windows</a>
+        <a href="{{ site.download.windows }}" class="btn" target="_blank">Download for Windows</a>
       {% endif %}
+      <a href="/releases/latest/" class="btn" target="_blank">Latest Release Notes</a>
     </header>
 
     <main id="content" class="main-content" role="main">
