--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
       {% if site.download.windows %}
         <a href="{{ site.download.windows }}" class="btn" target="_blank">Download for Windows</a>
       {% endif %}
-      <a href="/releases/latest/" class="btn" target="_blank">Latest Release Notes</a>
+      <a href="{{ site.github.repository_url }}/releases/latest/" class="btn" target="_blank">Latest Release Notes</a>
     </header>
 
     <main id="content" class="main-content" role="main">
